// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast expressions ArrayExpression should display an error because the field is empty 1`] = `
<span
  className="Literal"
>
  <Connect(Widget)
    actions={Object {}}
    className="LiteralWidget"
    compact={true}
    leftsiblings={Object {}}
    parent={
      Immutable.List [
        "body",
        0,
        "test",
        "arguments",
        1,
        "elements",
      ]
    }
    rule={Object {}}
    schemas={Object {}}
    value={Array []}
  />
  <Errors
    belowInput={false}
    inline={true}
    tag="div"
  >
    This field cannot be empty
  </Errors>
</span>
`;

exports[`ast expressions ArrayExpression should render component and not display any error 1`] = `
<span
  className="Literal"
>
  <Connect(Widget)
    actions={Object {}}
    className="LiteralWidget"
    compact={true}
    leftsiblings={Object {}}
    parent={
      Immutable.List [
        "body",
        0,
        "test",
        "arguments",
        1,
        "elements",
      ]
    }
    rule={Object {}}
    schemas={Object {}}
    value={
      Array [
        "hello",
        "world!",
      ]
    }
  />
</span>
`;
